--- a/web_server/client/package.json
+++ b/web_server/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front_end",
+  "name": "tiny-news",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "materialize-css": "^0.100.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router": "^3.2.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
