--- a/web_server/server/package.json
+++ b/web_server/server/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -13,6 +14,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jayson": "^2.0.6",
+    "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.3"
   }
