--- a/web_server/server/package.json
+++ b/web_server/server/package.json
@@ -14,8 +14,11 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jayson": "^2.0.6",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
